PC-596 Correct banner notice spacing on non-home page

--- a/vufind/themes/msul/less/custom.less
+++ b/vufind/themes/msul/less/custom.less
@@ -209,12 +209,14 @@ header {
 }
 
 .banner-notice {
+  margin-top: -3rem;
+  margin-bottom: 2rem;
   background-color: @alert-warning-bg;
   color: @eggplant;
   padding: 0.3rem 1rem 0.3rem 1rem;
 
   p {
-    margin: 0.4rem 0 0.4rem 0;
+    margin: 0.4rem 0 0.5rem 0;
   }
   a, i {
     color: @msugreen;
